test/fail/lambdas/lambda_argument_default.lly
#[
SyntaxError: Cannot infer type of 'a'.
Where: File "lambda_argument_default.lly" at line 10
]#

define f[A](g: function(A => A)) {

}

f({|a| a})
